--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
-  <div class="social-media-banner overflow overflow-orange" style="height:250px; width:1200px;margin:0 auto;text-align:center;padding-top:100px" >
+  <div class="social-media-banner overflow overflow-orange" >
     <a href="https://www.facebook.com/pages/Khan-Academie/123650984422563"><img src="/images/social-media-icons/facebook-256.png" height="128px" width="128px"></a>
     <a href="http://twitter.com/khanacademie"><img src="/images/social-media-icons/twitter-256.png" height="128px" width="128px"></a>
     <a href="https://plus.google.com/u/0/108155339552803678462/posts"><img src="/images/social-media-icons/googleplus-256.png" height="128px" width="128px"></a>
