--- a/stylesheets/homepage-package/homepage.css
+++ b/stylesheets/homepage-package/homepage.css
@@ -262,7 +262,26 @@ td.social-action.gplus {
 
 #slideshow {
     padding-bottom: 100px;
+    height:350px;
+    width: 1040px;
+    position: relative;
+    /*box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);*/
+    /*position: relative;*/
 }
+
+#slideshow > div {
+    position: absolute;
+    /*position: relative;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;*/
+}
+
+#slideshow a:hover {
+    text-decoration: none;
+}
+
 #homepage-content {
     /*border-bottom: 2px white solid*/
 }
@@ -349,11 +368,26 @@ img {
     max-width:100%;
 }
 
+.wikizoek-blurb {
+    display: inline-block; 
+    width: 49%; text-align: 
+    center; font-size: 1.5em; 
+    text-transform: uppercase;
+}
+
 
 .wikizoek-blurb h6 {
     font-family: "Raleway", sans-serif;
     font-size: 0.8em;
     display: inline-block;
+}
+
+.wikizoek-blurb a {
+    color: #000;
+}
+
+.wikizoek-blurb a:hover {
+    color: #0776A0;
 }
 
 .wikizoek-blurb img {
@@ -380,6 +414,19 @@ padding: 30px;
 
 .open-source-blurb h4 {
     font-size: 1.8em;
+}
+
+.open-source-blurb a {
+    color: #0776A0;
+}
+
+.open-source-blurb a:hover {
+    text-decoration: none;
+}
+
+.sites-blurb { 
+    background: white;
+    padding: 30px 30px 40px 30px;
 }
 /* Responsive stuff */
 
