--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -24,7 +24,7 @@
                 <!-- student icons stuff -->
                 <div class="focus-box">
                     <a href="/browse">
-                    <div id="kijk">
+                    <div class="focus-box-inner" id="kijk">
                     <img src="/images/icons/Oefen.png" width='230px' height='192px'>
                     <h3>Oefen</h3>
                     <p>Maak oefeningen en bekijk hulpvideo's.</p>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="focus-box">
                     <a href="/exercisedashboard">
-                    <div id="leer">
+                    <div class="focus-box-inner" id="leer">
                     <img src="/images/icons/Herhaal.png" width='230px' height='192px'>
                     <h3>Herhaal</h3>
                     <p>Oefen totdat je het onder die knie hebt.</p>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="focus-box">
                     <a href="/profile">
-                    <div id="groei">
+                    <div class="focus-box-inner" id="groei">
                     <img src="/images/icons/Groei.png" width='230px' height='192px'>
                     <h3>Groei</h3>
                     <p>Zie je voortgang en verdien punten.</p>
@@ -56,7 +56,7 @@
             <!-- teachers icons stuff -->
                 <div class="focus-box">
                     <a href="/browse">
-                    <div id="kijk">
+                    <div class="focus-box-inner" id="kijk">
                     <img src="/images/icons/volg.png" width='230px' height='192px'>
                     <h3>Volg</h3>
                     <p>Volg wat je leerlingen doen en zie hoever ze komen</p>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="focus-box">
                     <a href="/browse">
-                    <div id="leer">
+                    <div class="focus-box-inner" id="leer">
                     <img src="/images/icons/leer.png" width='230px' height='192px'>
                     <h3>Leer</h3>
                     <p>Leer van de statistieken waar leerlingen moeite mee hebben</p>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="focus-box">
                     <a href="/browse">
-                    <div id="groei">
+                    <div class="focus-box-inner" id="groei">
                     <img src="/images/icons/Groei.png" width='230px' height='192px'>
                     <h3>Verrijk</h3>
                     <p>Geef meer aandacht aan  probleem gebieden en help je leerlingen om te groeien</p>
@@ -89,8 +89,9 @@
         </div>
         <div class='homepage-video-blurb' style="padding: 60px 0px;">
             <div class="homepage-video" style="display: inline-block; width:600px; margin-right: 40px">
-                <iframe width="600" height="360" src="http://www.youtube.com/embed/ewsvvVtVfmo" frameborder="0" allowfullscreen></iframe>
-                </iframe>
+                <img src="/images/school-plaatje-home.jpeg">
+                <!-- <iframe width="600" height="360" frameborder="0" allowfullscreen></iframe>
+                </iframe> --> <!-- src="http://www.youtube.com/embed/ewsvvVtVfmo" -->
             </div>
             <div class='open-source-blurb' style="display: inline-block; background:white; width: 395px;">
               <h4 style="color:orange; font-family:Ralewayl font-size: 1.4em">Khan Academie <strong>open source</strong></h4>
