--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -93,12 +93,12 @@
                 <!-- <iframe width="600" height="360" frameborder="0" allowfullscreen></iframe>
                 </iframe> --> <!-- src="http://www.youtube.com/embed/ewsvvVtVfmo" -->
             </div>
-            <div class='open-source-blurb' style="display: inline-block; background:white; width: 395px;">
-              <h4 style="color:orange; font-family:Ralewayl font-size: 1.4em">Khan Academie <strong>open source</strong></h4>
-              <p style="color:black; font-family:Raleway; letter-spacing: 1.2px; font-size: 0.8em">
+            <div class='open-source-blurb' style="display: inline-block; background:white; width: 460px;">
+              <h4 style="color:orange; font-family:Raleway;font-size: 1.4em">Khan Academie <strong>open source</strong></h4>
+              <p style="color:black; font-family:Raleway; letter-spacing: 1.5px; font-size: 1em">
                 De Khan Academie is volledig open source. Dit betekent dat elke enthousiasteling kan meewerken aan dit platform.
                 Wij willen graag dat deze Nederlandse Khan Academie groeit met behulp van een community van programmeurs en leraren.
-                Hierdoor kan de Khan Academie gratis blijven voortbestaan en wordt deze eigendom en ontwikkeled volgens de visie 
+                Hierdoor kan de Khan Academie gratis blijven voortbestaan en wordt deze eigendom en ontwikkeld volgens de visie 
                 van de onderwijs community.</p>
                 <a href="https://github.com/PerceptumNL/KhanLatest">U kunt de code vinden in <strong>GitHub</strong></a>
             </div>
@@ -133,7 +133,7 @@
         {{ js_css_packages.css_package("homepage") }}
     {% endif %}
     <script type="text/javascript">
-    $(document).ready(function () {
+    $(document).onclick(function () {
         $('#slideshow > div:gt(0)').hide();
         setInterval(function () {
             $('#slideshow > div:first')
