--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -42,7 +42,7 @@
           <li><a href="/about/contact">Contact</a></li>
         </ul>
         <ul>
-          <li>Other</li>
+          <li>Overig</li>
           <li><a href="/gebruiksvoorwaarden">Gebruikersvoorwaarden</a></li>
           <li><a href="/privacybeleid">Privacybeleid</a></li>
         </ul>
