footer re-arranged

--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -17,9 +17,8 @@
         <ul>
           <li>Over Ons</li>
           <li><a href="/about">Onze Missie en Visie</a></li>
+          <li><a href="/stichting">Stichting Khan Academie</a></li>
           <li><a href="/voorleraren">Hoe werkt het?</a></li>
-          <li><a href="/login?continue=%2Fpostlogin&direct=1">Inloggen Leerling</a></li>
-          <li><a href="/login?continue=http%3A//www.khanacademie.nl/class_profile">Inloggen Coach</a></li>
           <!-- <li><a href="http://blog.khanacademie.nl">Blog</a></li> -->
         </ul>
 <!--         <ul>
@@ -43,6 +42,8 @@
         </ul>
         <ul>
           <li>Other</li>
+          <li><a href="/login?continue=%2Fpostlogin&direct=1">Inloggen Leerling</a></li>
+          <li><a href="/login?continue=http%3A//www.khanacademie.nl/class_profile">Inloggen Coach</a></li>
           <li><a href="/gebruiksvoorwaarden">Gebruikersvoorwaarden</a></li>
           <li><a href="/privacybeleid">Privacybeleid</a></li>
         </ul>
