changing text in subpages

--- a/templates/partners.html
+++ b/templates/partners.html
@@ -30,7 +30,7 @@
 
 {% block pagecontent %}
     <article id='partners'>
-    	<p>Partner word van Khan</p>
+    	<h2>Wordt partner van Khan</h2>
     	<p>Het is mogelijk om je op verschillende manieren aan Khan te binden. </p>
     	<h3>Video Makers</h3>
     	<p>
@@ -69,7 +69,7 @@
     	</p>
     	<p>
     		Om aan de vraag van deze scholen te voldoen zijn wij op zoek naar een partner die deze implementatie wil verzorgen. 
-    		Door middel van een nauwe samenwerking kunnen wij zo de scholen nog steeds van een complete service voorzien 
+    		Door middel van een nauwe samenwerking kunnen wij zo de scholen nog steeds van een complete service voorzien. 
     	</p>
     </article>
 
