--- a/templates/voorleerlingen.html
+++ b/templates/voorleerlingen.html
@@ -35,7 +35,7 @@ img {
 {% block pagecontent %}
     <article id='voorleraren'>
         <h1>Voor leraren</h1>
-        <h3>Werken met Khan Academie</h3>
+        <h3>Werken meet Khan Academie</h3>
           <p>
             Khan Academie is helemaal gratis te gebruiken. 
             Dit past in ons doel om passend onderwijs voor iedereen mogelijk te maken. Het enige benodigde is een Google- of Facebookaccount.
