--- a/templates/about/about_the_site.html
+++ b/templates/about/about_the_site.html
@@ -1,23 +1,69 @@
 {% extends "about/about_template.html" %}
 
 {% import 'macros/youtube.html' as youtube %}
-
+{% block pagescript %}
+    <style>
+    #about-us {
+      background: transparent; }
+    #page_sub_nav {
+      display:none;
+    }
+    </style>
+{% endblock pagescript %}
 {% block aboutcontent %}
+<article style="width:1120px; margin: 0 auto; background: white;">
+<div class="col2 forty-sixty" style="max-width:100%; text-align: justify; float: center;">
+<h2 class="main-headline" style="white-space: pre;">Toekomst: Missie en visie</h2>
 
-<div class="col1 forty-sixty" style="text-align: center; padding-top: 18px; min-width:160px; max-width:160px; margin-right: 2%;">
-    <img id="about-vertical-logo" src="/images/khan-logo-vertical-transparent.png" height=250 width=178 />
+<h4>Gratis onderwijs voor iedereen overal.</h4>
+
+<p>De Khan Academie is een organisatie zonder winstoogmerk en met een bijzondere missie. Het doel is van de Khan Academie is het onderwijs In Nederland te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. Geïnspireerd door het bijzondere werk van Salman Khan met de Khan Academy besloot Wijnand Baretta eind 2011 de Amerikaanse website aan te passen en te vertalen naar de Nederlandse onderwijssituatie. Ontdek zelf wat er tot nu toe is bereikt! Ook geïnspireerd geraakt? Klik op Help Mee hoe je zelf een bijdrage kunt leveren!
+</p><p>
+Al het materiaal op de site is voor iedereen beschikbaar of je nu leerling bent, of leraar, of thuisstudent, of schoolhoofd, of een tweedekanser die na twintig jaar weer naar school wil, of een vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. Al het materiaal van de Khan Academie en alle hulpmiddelen die wij aanbieden zijn kosteloos beschikbaar voor iedereen.
+</p>
+<h4>Zou het niet fijn zijn als je altijd tijd hebt voor je leerlingen?<h4>
+<p>
+
+<img src="/images/school-plaatje-home.jpeg" alt="Khan Academie" width="400" align="left" style="padding-right: 10px;">
+De Khan Academie is onafhankelijk van de Amerikaanse Khan Academy. Dit is een bewuste keuze geweest. Wij willen namelijk niet afhankelijk zijn van andere partijen en zelf kunnen kiezen waar we onze tijd en energie in steken. 
+Wij streven er naar om Nederland een OpenSource platform te bieden waar leerlingen in hun eigen tempo het Nederlandse curriculum kunnen doorlopen en waar leraren zelf oefeningen en video’s kunnen toevoegen.
+
+Door diverse tools te ontwikkelen maken we een EKO-systeem mogelijk waarbij onze inbreng steeds minder nodig zal zijn. Met EKO-systeem bedoelen wij dat het platform wordt gedragen door de onderwijs gemeenschap en dat die mensen zorgen dat de oefeningen en video’s van Khan Academie actueel en volledig blijven. De Khan Academie is op deze manier een product dat voor en door gebruikers wordt ontwikkeld en kan mede hierdoor altijd gratis beschikbaar blijven. Binnenkort zal de Khan Academie een stichting worden waardoor het platform officieel onafhankelijk is van Perceptum. Wil jij een rol spelen in deze stichting? Laat het ons dan weten!
+</p>
+
+</br><h3>Content</h3>
+<p>Zodra je als kind op de basisschool, of thuis begint met rekenen kun je terecht op de Khan Academie. Je kunt vanuit dit punt doorstromen naar elk niveau, zolang je zelf maar oefent. Toch richten wij ons niet alleen op rekenen/wiskunde. Het platform is namelijk niet alleen uitermate geschikt voor natuur/scheikunde, maar bijvoorbeeld ook voor taal (Nederlands) of om te leren lezen. 
+Uiteindelijk kun je dus meerdere vakken oefenen op verschillende niveau’s. Zo is het voor leerlingen van de basisschool bijvoorbeeld al mogelijk om te werken aan vakken die zij normaal gesproken pas op de middelbare school zouden krijgen. Goed voor de excelentiebevordering dus. 
+</p>
+<h3>Oefeningen</h3>
+<p>Doel van de Khan Academie is het aanbieden van het gehele Nederlandse curriculum. Het curriculum is vertaald naar leerlijnen, opgedeeld in concrete doelen (Een concreet doel voor groep 4 is bijvoorbeeld “Tellen tot 100”). Vervolgens dient elk doel van een oefening en een video te worden voorzien. Leerlingen kunnen zo stap voor stap het curriculum doorlopen terwijl de leraar of coach duidelijk door het goede leerlingvolgsysteem kan zien waar welke leerling is en waar de leerling moeite mee heeft. 
+De oefeningen kunnen zelf gemaakt worden. In onze wiki zie je de gebruikte leerlijnen staan met hyperlinks naar de desbetreffende oefeningen. Ook zie je hier lege plekken. Dat betekent dat hier nog geen video of oefening voor gemaakt is. In onze tool kun je zelf aangeven welke vragen er gesteld worden, welke hints er gegeven worden en wat de antwoorden zijn. Ook kun je aangeven welke visualisaties erbij gebruikt moeten worden. Op deze manier kan jij dus ook bijdragen aan het creëren van nieuwe content en het verbeteren van de site!
+</p>
+<h3>Video</h3>
+<p>Steeds meer leraren maken instructievideo’s of nemen hun lessen op. De Khan Academie biedt een plaats om deze video’s op een gestructureerde manier aan te bieden. Sommige oefeningen zullen dubbele video’s krijgen en sommige oefeningen wat minder. Door middel van een stemsysteem worden de meest gewaardeerde video’s ook als eerste aangeboden. Slechte video’s worden automatisch verwijderd bij een bepaald aantal negatieve stemmen. Stemmen van coaches, docenten en leraren wegen hierbij zwaarder dan die van leerlingen. Ben je een coach of een leerling? Log dan in bij het daarvoor bestemde portaal.
+</p>
+<h3>Taggen</h3>
+<p>Docenten die zich bezighouden met “Flipping the Classroom” kunnen hun video’s uploaden. Vervolgens kunnen zij door middel van tags aangeven wat er in deze video behandeld wordt. 
+Bijvoorbeeld: Iemand heeft een video over Pythagoras gemaakt. Deze kun je dan uploaden. Vervolgens verschijnen er een aantal voorbeeldtags die je aan kunt klikken. In dit geval zou het gaan om “Wiskunde”, “havo”, “atheneum”, “Pythagoras”. Ook is er nog een vakje waar je zelf tags kunt invoeren om dit nog verder te specificeren. 
+Het systeem geeft vervolgens suggesties om de video aan een oefening te koppelen. Ook dit gebeurt aan de hand van tags. Elke oefening is namelijk ook voorzien van tags waardoor het systeem oefeningen voorstelt om de video aan te koppelen. 
+</p>
+<h3>Uservoice</h3>
+<p>De stem van de gebruiker is goud waard. Jullie maken tenslotte samen het product tot een succes. Daarom is er onder elke pagina een mogelijkheid tot discussie toegevoegd. Alle reacties hiervan worden verzameld op een centrale plek zodat je jouw mening kunt geven op de voor jou relevante onderwerpen.
+</p>
+<p>
+Te ontwikkelen tools:
+<ul>
+<li>- Tool zodat gebruikers hun eigen opgaven kunnen uploaden. (Op het moment programmeert Perceptum nog alle oefeningen) Vragen, hints en antwoorden zijn hierbij verplicht om op te geven.</li> 
+<li>- Upload mogelijkheid vanaf de website.</li>
+<li>- Tagsysteem voor oefeningen en video’s.</li>
+<li>- voor het  beoordelen van video’s.</li>
+<li>- Handschriftherkenning (voor tablets).</li>
+<li>- Spraakherkenning bv voor uitspraakoefeningen.</li>
+</ul>
+</p>
+<p>Wij komen graag in gesprek met mensen die samen willen werken of content (oefeningen/video’s) voor ons willen ontwikkelen. Ook staan wij open voor ideeën over bijvoorbeeld de indeling van de oefeningen of welke namen deze moeten hebben. 
+</p>
+
 </div>
-<div class="col2 forty-sixty" style="max-width:81%; text-align: justify;">
-<h2 class="main-headline" style="white-space: pre;">Gratis onderwijs voor iedereen overal.</h2>
-    <p>
-        De Khan Academie is een organisatie zonder winstoogmerk en met een bijzondere missie. Het doel is van de Khan Academie is het onderwijs In Nederland te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. 
-		Geïnspireerd door het bijzondere werk van Salman Khan met de <a href="http://khanacademy.org"> Khan Academy </a> besloot Wijnand Baretta eind 2011 de Amerikaanse website aan te passen en te vertalen naar de Nederlandse onderwijssituatie. Ontdek zelf wat er tot nu toe is bereikt! 
-		Ook geïnspireerd geraakt? Klik op Help Mee hoe je zelf een bijdrage kunt leveren!
-    </p>
-    <p>
-        Al het materiaal op de site is voor iedereen beschikbaar of je nu leerling bent, of leraar, of thuisstudent, of schoolhoofd, of een tweedekanser die na twintig jaar weer naar school wil, of een vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. Al het materiaal van de Khan Academie en alle hulpmiddelen die wij aanbieden zijn kosteloos beschikbaar voor iedereen.   
-
-    </p>
-</div>
-
+<article>
 {% endblock aboutcontent %}
