--- a/templates/training.html
+++ b/templates/training.html
@@ -31,9 +31,9 @@
 
 {% block pagecontent %}
     <article id="training">
-    	<h2>Training and Ondersteuning</h2>
-    	<p>Een van de doelen van de Khan Academie is om een gratis, toegankelijk en slim leerplatform aan scholen te bieden om zo de leraar te ontlasten en de leerling lessen op maat te kunnen bieden. Het toepassen van digitale middelen brengt natuurlijk wel meer met zich mee dan alleen het gebruiken van een platform. De rol van de leraar veranderd en lessen kunnen anders worden ingedeeld dan voorheen. </p>
-    	<p>Wij helpen u graag in de overstap naar het digitaliseren van uw lessen, zowel fysiek als mentaal. Wij bieden trainingen en workshops aan, waarin wij prangende vragen beantwoorden en onduidelijke zaken verhelderen. Met ons brede netwerk aan experts op gebied van onderwijs en techniek kunnen wij u een training op maat aanbieden. Naast filosofische vraagstukken te behandelen kunnen wij u helpen met het efficiënt inzetten van de Khan academie en andere digitale tools in uw lessen en of lesplannen. Vind het wiel niet opnieuw uit, en laat ons u helpen!</p>
+    	<h2>Training en Ondersteuning</h2>
+    	<p>Een van de doelen van de Khan Academie is om een gratis, toegankelijk en slim leerplatform aan scholen te bieden om zo de leraar te ontlasten en de leerling lessen op maat te kunnen bieden. Het toepassen van digitale middelen brengt natuurlijk wel meer met zich mee dan alleen het gebruiken van een platform. De rol van de leraar verandert en lessen kunnen anders worden ingedeeld dan voorheen. </p>
+    	<p>Wij helpen u graag in de overstap naar het digitaliseren van uw lessen, zowel fysiek als mentaal. Wij bieden trainingen en workshops aan, waarin wij prangende vragen beantwoorden en onduidelijke zaken verhelderen. Met ons brede netwerk aan experts op gebied van onderwijs en techniek kunnen wij u een training op maat aanbieden. Naast filosofische vraagstukken te behandelen kunnen wij u helpen met het efficiënt inzetten van de Khan Academie en andere digitale tools in uw lessen en of lesplannen. Vind het wiel niet opnieuw uit, en laat ons u helpen!</p>
     	<p>
     	Wij als organisatie zijn dagelijks bezig met het verbeteren van het inzetten van tools en het ontwikkelen van een duidelijke strategie met betrekking tot kennisdeling en kennisvergaren. Het wordt steeds belangrijker om deze zaken op orde te hebben, en al helemaal in de toekomst. Goede voorbereiding is het halve werk.</p>
     </article>
