Corrected text for typo's, spelling mistakes, and literal translations.

--- a/templates/about/about_the_site.html
+++ b/templates/about/about_the_site.html
@@ -15,11 +15,11 @@
 <div class="col2 forty-sixty" style="max-width:100%; text-align: justify; float: center;">
 <h2 class="main-headline" style="white-space: pre;">Toekomst: Missie en visie</h2>
 
-<h4>Gratis onderwijs voor iedereen overal.</h4>
+<h4>Gratis onderwijs voor iedereen overal</h4>
 
-<p>De Khan Academie is een organisatie zonder winstoogmerk en met een bijzondere missie. Het doel is van de Khan Academie is het onderwijs In Nederland te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. Geïnspireerd door het bijzondere werk van Salman Khan met de Khan Academy besloot Wijnand Baretta eind 2011 de Amerikaanse website aan te passen en te vertalen naar de Nederlandse onderwijssituatie. Ontdek zelf wat er tot nu toe is bereikt! Ook geïnspireerd geraakt? Klik op Help Mee hoe je zelf een bijdrage kunt leveren!
+<p>De Khan Academie is een organisatie zonder winstoogmerk en met een bijzondere missie. Het doel van de Khan Academie is het onderwijs in Nederland te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. Geïnspireerd door het bijzondere werk van Salman Khan met de Khan Academy besloot Wijnand Baretta eind 2011 de Amerikaanse website aan te passen en te vertalen naar de Nederlandse onderwijssituatie. Ontdek zelf wat er tot nu toe is bereikt! Ook geïnspireerd geraakt? Klik op <a href="http://www.khanacademie.nl/helpmee">Draag bij</a> hoe je zelf een bijdrage kunt leveren!
 </p><p>
-Al het materiaal op de site is voor iedereen beschikbaar of je nu leerling bent, of leraar, of thuisstudent, of schoolhoofd, of een tweedekanser die na twintig jaar weer naar school wil, of een vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. Al het materiaal van de Khan Academie en alle hulpmiddelen die wij aanbieden zijn kosteloos beschikbaar voor iedereen.
+Al het materiaal op de site is voor iedereen beschikbaar of je nu leerling, leraar, thuisstudent, schoolhoofd, of een tweedekanser bent, die na twintig jaar weer naar school wil, of zelfseen vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. Al het materiaal van de Khan Academie en alle hulpmiddelen die wij aanbieden zijn kosteloos beschikbaar voor iedereen.
 </p>
 <h4>Zou het niet fijn zijn als je altijd tijd hebt voor je leerlingen?<h4>
 <p>
@@ -32,36 +32,36 @@ Door diverse tools te ontwikkelen maken we een EKO-systeem mogelijk waarbij onze
 </p>
 
 </br><h3>Content</h3>
-<p>Zodra je als kind op de basisschool, of thuis begint met rekenen kun je terecht op de Khan Academie. Je kunt vanuit dit punt doorstromen naar elk niveau, zolang je zelf maar oefent. Toch richten wij ons niet alleen op rekenen/wiskunde. Het platform is namelijk niet alleen uitermate geschikt voor natuur/scheikunde, maar bijvoorbeeld ook voor taal (Nederlands) of om te leren lezen. 
-Uiteindelijk kun je dus meerdere vakken oefenen op verschillende niveau’s. Zo is het voor leerlingen van de basisschool bijvoorbeeld al mogelijk om te werken aan vakken die zij normaal gesproken pas op de middelbare school zouden krijgen. Goed voor de excelentiebevordering dus. 
+<p>Zodra je als kind op de basisschool of thuis begint met rekenen kun je terecht op de Khan Academie. Je kunt vanuit dit punt doorstromen naar elk niveau, zolang je maar zelf oefent. Toch richten wij ons niet alleen op rekenen/wiskunde. Het platform is namelijk niet alleen uitermate geschikt voor natuur-/scheikunde, maar bijvoorbeeld ook voor taal (Nederlands) of om te leren lezen. 
+Uiteindelijk kun je dus meerdere vakken oefenen op verschillende niveaus. Zo is het voor leerlingen van de basisschool bijvoorbeeld al mogelijk om te werken aan vakken die zij normaal gesproken pas op de middelbare school zouden krijgen. Goed voor de excellentiebevordering dus. 
 </p>
 <h3>Oefeningen</h3>
-<p>Doel van de Khan Academie is het aanbieden van het gehele Nederlandse curriculum. Het curriculum is vertaald naar leerlijnen, opgedeeld in concrete doelen (Een concreet doel voor groep 4 is bijvoorbeeld “Tellen tot 100”). Vervolgens dient elk doel van een oefening en een video te worden voorzien. Leerlingen kunnen zo stap voor stap het curriculum doorlopen terwijl de leraar of coach duidelijk door het goede leerlingvolgsysteem kan zien waar welke leerling is en waar de leerling moeite mee heeft. 
-De oefeningen kunnen zelf gemaakt worden. In onze wiki zie je de gebruikte leerlijnen staan met hyperlinks naar de desbetreffende oefeningen. Ook zie je hier lege plekken. Dat betekent dat hier nog geen video of oefening voor gemaakt is. In onze tool kun je zelf aangeven welke vragen er gesteld worden, welke hints er gegeven worden en wat de antwoorden zijn. Ook kun je aangeven welke visualisaties erbij gebruikt moeten worden. Op deze manier kan jij dus ook bijdragen aan het creëren van nieuwe content en het verbeteren van de site!
+<p>Doel van de Khan Academie is het aanbieden van het gehele Nederlandse curriculum. Het curriculum is vertaald naar leerlijnen, opgedeeld in concrete doelen (een concreet doel voor groep 4 is bijvoorbeeld “Tellen tot 100”). Vervolgens dient elk doel van een oefening en een video te worden voorzien. Leerlingen kunnen zo stap voor stap het curriculum doorlopen terwijl de leraar of coach duidelijk door het goede leerlingvolgsysteem kan zien waar welke leerling is en waar de leerling moeite mee heeft. 
+De oefeningen kunnen zelf gemaakt worden. In onze <a href="http://wiki.khanacademie.nl/">wiki</a> zie je de gebruikte leerlijnen staan met links naar de desbetreffende oefeningen. Ook zie je hier lege plekken. Dat betekent dat hier nog geen video of oefening voor gemaakt is. In onze tool kun je zelf aangeven welke vragen er gesteld worden, welke hints er gegeven worden en wat de antwoorden zijn. Ook kun je aangeven welke visualisaties erbij gebruikt moeten worden. Op deze manier kan jij dus ook bijdragen aan het creëren van nieuwe content en het verbeteren van de site!
 </p>
 <h3>Video</h3>
 <p>Steeds meer leraren maken instructievideo’s of nemen hun lessen op. De Khan Academie biedt een plaats om deze video’s op een gestructureerde manier aan te bieden. Sommige oefeningen zullen dubbele video’s krijgen en sommige oefeningen wat minder. Door middel van een stemsysteem worden de meest gewaardeerde video’s ook als eerste aangeboden. Slechte video’s worden automatisch verwijderd bij een bepaald aantal negatieve stemmen. Stemmen van coaches, docenten en leraren wegen hierbij zwaarder dan die van leerlingen. Ben je een coach of een leerling? Log dan in bij het daarvoor bestemde portaal.
 </p>
 <h3>Taggen</h3>
 <p>Docenten die zich bezighouden met “Flipping the Classroom” kunnen hun video’s uploaden. Vervolgens kunnen zij door middel van tags aangeven wat er in deze video behandeld wordt. 
-Bijvoorbeeld: Iemand heeft een video over Pythagoras gemaakt. Deze kun je dan uploaden. Vervolgens verschijnen er een aantal voorbeeldtags die je aan kunt klikken. In dit geval zou het gaan om “Wiskunde”, “havo”, “atheneum”, “Pythagoras”. Ook is er nog een vakje waar je zelf tags kunt invoeren om dit nog verder te specificeren. 
+Bijvoorbeeld: Iemand heeft een video over Pythagoras gemaakt. Deze kun je dan uploaden. Vervolgens verschijnen er een aantal voorbeeldtags die je aan kunt klikken. In dit geval zou het gaan om “wiskunde”, “havo”, “atheneum”, “Pythagoras”. Ook is er nog een vakje waar je zelf tags kunt invoeren om dit nog verder te specificeren. 
 Het systeem geeft vervolgens suggesties om de video aan een oefening te koppelen. Ook dit gebeurt aan de hand van tags. Elke oefening is namelijk ook voorzien van tags waardoor het systeem oefeningen voorstelt om de video aan te koppelen. 
 </p>
-<h3>Uservoice</h3>
-<p>De stem van de gebruiker is goud waard. Jullie maken tenslotte samen het product tot een succes. Daarom is er onder elke pagina een mogelijkheid tot discussie toegevoegd. Alle reacties hiervan worden verzameld op een centrale plek zodat je jouw mening kunt geven op de voor jou relevante onderwerpen.
+<h3>Jouw mening</h3>
+<p>De stem van de gebruiker is goud waard. Jullie maken tenslotte samen het product tot een succes. Daarom is er onder elke pagina gelegenheid om te discussiëren. Alle reacties hierin worden verzameld op een centrale plek zodat je jouw mening kunt geven op de voor jou relevante onderwerpen.
 </p>
 <p>
 Te ontwikkelen tools:
 <ul>
 <li>- Tool zodat gebruikers hun eigen opgaven kunnen uploaden. (Op het moment programmeert Perceptum nog alle oefeningen) Vragen, hints en antwoorden zijn hierbij verplicht om op te geven.</li> 
-<li>- Upload mogelijkheid vanaf de website.</li>
+<li>- Uploadmogelijkheid vanaf de website.</li>
 <li>- Tagsysteem voor oefeningen en video’s.</li>
-<li>- voor het  beoordelen van video’s.</li>
+<li>- Systeem voor het beoordelen van video’s.</li>
 <li>- Handschriftherkenning (voor tablets).</li>
-<li>- Spraakherkenning bv voor uitspraakoefeningen.</li>
+<li>- Spraakherkenning bijvoorbeeld voor lees- of uitspraakoefeningen.</li>
 </ul>
 </p>
-<p>Wij komen graag in gesprek met mensen die samen willen werken of content (oefeningen/video’s) voor ons willen ontwikkelen. Ook staan wij open voor ideeën over bijvoorbeeld de indeling van de oefeningen of welke namen deze moeten hebben. 
+<p>Wij spreken graag met mensen die samen willen werken of content (oefeningen/video’s) voor ons willen ontwikkelen. Ook staan wij open voor ideeën over bijvoorbeeld de indeling van de oefeningen of welke namen deze moeten hebben. 
 </p>
 
 </div>
