--- a/templates/about/faq.html
+++ b/templates/about/faq.html
@@ -88,7 +88,7 @@
     </p>		
 	<a name="lesprogramma"><h2>Wat voor soort lesprogramma volg je?</h2></a>
     <p>
-		Eigenlijk volg ik geen lesprogramma. Ik ben ervan overtuigd dat degene die de kern van de lesstof goed begrijpt met succes onderwijs kan volgen zonder dat dat is ingebed in een lesprogramma. Om nog wat verder te gaan: ik geloof dat wie de vreugde ervaart van iets echt goed te begrijpen nooit meer tevreden zal zijn met het oppervlakkige leren waaraan de meeste studenten gewend zijn geraakt. Voor de Khan Academy is niets zo belangrijk als echt begrip te kweken.
+		Eigenlijk volg ik geen lesprogramma. Ik ben ervan overtuigd dat degene die de kern van de lesstof goed begrijpt met succes onderwijs kan volgen zonder dat dat is ingebed in een lesprogramma. Om nog wat verder te gaan: ik geloof dat wie de vreugde ervaart van iets echt goed te begrijpen nooit meer tevreden zal zijn met het oppervlakkige leren waaraan de meeste studenten gewend zijn geraakt. Voor de Khan Academie is niets zo belangrijk als echt begrip te kweken.
 		Dat gezegd hebbende, in landelijke examens komt allerlei stof aan bod waar studenten kennis van moeten hebben om de examens met succes te kunnen afleggen. Daarom probeer ik alle mogelijke onderwerpen aan bod te laten komen.
 		</br></br>
 		Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij, een mens van vlees en bloed, gefascineerd door de wereld om mij heen. De lesstof wordt uitgelegd zoals ik het zelf begrijp niet zoals ze in een stoffig lesboek staan.
