--- a/templates/about/gettingstarted.html
+++ b/templates/about/gettingstarted.html
@@ -82,7 +82,7 @@
 
 <div class="col2 sixty-forty" >
     <h2>Hoe werkt Khan voor leerlingen?</h2>
-    <p>Leerlingen kunnen op elke computer, tablet en smartphone gebruik maken van onze uitgebreide collectie video's, oefeningen en persoonlijke rapportage's. Een internetaansluiting is het enige vereiste.</p>
+    <p>Leerlingen kunnen op elke computer, tablet en smartphone gebruik maken van onze uitgebreide collectie video's, oefeningen en persoonlijke rapportages. Een internetaansluiting is het enige vereiste.</p>
     <ol>
         <li>{{ youtube.jump_link("Een leerinstrument volledig op maat", 0) }}</li>
         <li>{{ youtube.jump_link("Een dynamisch hulpsysteem", 130) }}</li>
@@ -104,7 +104,7 @@
         <p class="justify">
             Onze <a href="/#browse">collectie video's</a> omvat op dit moment vooral <strong>rekenen en wiskunde</strong>. Elke video is een les van tussen de vijf en tien minuten waarin uitleg wordt gegeven over één onderwerp. 
             Geïnspireerd door de video's van Salman Khan en zijn woorden: 'Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij en ik ben een levensecht mens die gefascineerd is door de wereld om hem heen.'
-            Voor onze website willen wij graag dat iedereen die denkt een bijdrage te kunnen leveren in het onderwijs via de Khan Academie die kans krijgt. Bij help mee kun je zien hoe ook jij van betekenis kunt zijn voor de Khan Academie.</em><br/>
+            Voor onze website willen wij graag dat iedereen die denkt een bijdrage te kunnen leveren in het onderwijs via de Khan Academie die kans krijgt. Bij <a href="http://www.khanacademie.nl/helpmee">draag bij</a> kun je zien hoe ook jij van betekenis kunt zijn voor de Khan Academie.</em><br/>
             &mdash;
         </p>
     </div>
@@ -121,7 +121,7 @@
         <h2>Een enorme hoeveelheid oefeningen, met ondersteuning op elk gewenst moment</h2>
         <p class="justify">
         <a href="/exercisedashboard">Oefen rekenen en wiskunde in je eigen tempo met oefeningen die op je eigen leerstijl zijn afgestemd.</a> with our adaptive assessment environment. Je kunt <strong>beginnen met 1+1 en zo verder oefenen met rekenen </strong> of direct beginnen met een ander onderwerp waarover je kennis is weggezakt <br/><br/>
-        Er is geen vaste volgorde in oefeningen of sommen.Ze worden willekeurig aangeleverd zodat ze steeds weer nieuw zijn en je nooit zonder oefenmateriaal zit. <strong>Als je een aanwijzing nodig hebt, kan een probleem met een eenvoudige klik op de ''hint'' knop worden opgedeeld in stukjes.</strong> Als je meer hulp nodig hebt, kun je altijd naar een video kijken die met het onderwerp te maken heeft. 
+        Er is geen vaste volgorde in oefeningen of sommen. Ze worden willekeurig aangeleverd zodat ze steeds weer nieuw zijn en je nooit zonder oefenmateriaal zit. <strong>Als je een aanwijzing nodig hebt, kan een probleem met een eenvoudige klik op de ''hint'' knop worden opgedeeld in stukjes.</strong> Als je meer hulp nodig hebt, kun je altijd naar een video kijken die met het onderwerp te maken heeft. 
         </p>
     </div>
     <div class="clear"></div>
@@ -130,7 +130,7 @@
     <div class="col1 sixty-forty right">
         <h2>Actuele volgsystemen</h2>
         <p class="justify">
-        De Khan Academie houdt precies bij wat je doet en welke vorderingen je maakt wanneer je met de Khan Academie werkt. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld. Er zijn wel heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider (of coach). Wanneer je erom vraagt, krijg je ogenblikkelijk informatie over alles wat je hebt geleerd en de resultaten die hebt behaald. Je kunt elke gewenste informatie opvragen over het totaal van je activiteiten tot aan elke oefening die je hebt gemaakt. Je vindt <strong>echte informatie over je voortgang en je toename van kennis over bijvoorbeeld</strong> wiskunde. 
+        De Khan Academie houdt precies bij wat je doet en welke vorderingen je maakt wanneer je met de Khan Academie werkt. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld. Er zijn wel heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider (of coach). Wanneer je erom vraagt, krijg je meteen informatie over alles wat je hebt geleerd en de resultaten die hebt behaald. Je kunt alle informatie opvragen van het totaal aan activiteiten tot aan individuele oefeningen. Je vindt <strong>echte informatie over je voortgang en je toename van kennis</strong> over bijvoorbeeld wiskunde. 
         </p>
     </div>
     <div class="col2 sixty-forty screenshot">
@@ -146,7 +146,7 @@
         <h2>De kenniskaart</h2>
         <p class="justify">
             <img class="rounded-background" src="/images/screenshot-tour/challenges-small.png" style="float:right;margin-left:20px;"/>
-            <a href="/exercisedashboard">De kenniskaart</a> toont je al onze oefeningen. Je kunt <strong>in- en uitzoomen en rondneuzen</strong> in alle verschillende oefeningen, net als bij een gewone kaart. Je kunt op elke gewenste plek beginnen aan de oefeningen. De Khan Academie adviseert je over de oefeningen die het meest geschikt zijn. Je krijgt ook een seintje als het raadzaam is om oefeningen te gaan herhalen.<br/><br/>
+            <a href="/exercisedashboard">De kenniskaart</a> laat al al onze oefeningen. Je kunt <strong>in- en uitzoomen en rondneuzen</strong> in alle verschillende oefeningen, net als bij een gewone kaart. Je kunt op elke gewenste plek beginnen aan de oefeningen. De Khan Academie adviseert je over de oefeningen die het meest geschikt zijn. Je krijgt ook een seintje als het raadzaam is om oefeningen te gaan herhalen.<br/><br/>
             Als je de kenniskaart helemaal uitzoomt, vind je al onze uitdagingen waarbij een aantal kleinere oefeningen met elkaar in verband worden gebracht. Wanneer je alle oefeningen succesvol gemaakt hebt beheers je de wiskunde. <br/><br/>
             
             Wij zullen nieuwe oefeningen blijven toevoegen aan de kenniskaart.
@@ -159,7 +159,7 @@
         <h2>Het klassenoverzicht</h2>
         <p class="justify">
         Leerkrachten en studiebegeleiders hebben toegang tot alle gegevens van hun leerlingen. Een leerkracht of begeleider krijgt <strong>een overzicht van wat de klas in zijn geheel presteert, maar ook van de individuele prestaties van een leerling,</strong> zodat duidelijk is waar de problemen of juist talenten schuilen. <a href="/class_profile">Het profiel van de klas</a> geeft de studiebegeleider de gelegenheid zich te concentreren op juist die onderwerpen waar extra aandacht nodig is.<br/><br/>
-        Met het leerlingvolgsysteem kun je <strong>in een oogopslag zien of een leerling problemen heeft met het vermenigvuldigen van breuken, </strong>...of juist een groot talent schijnt te hebben en mijlenver voor ligt op de klas.
+        Met het leerlingvolgsysteem kun je <strong>in één oogopslag zien of een leerling problemen heeft met het vermenigvuldigen van breuken, </strong>... of juist een groot talent schijnt te hebben en mijlenver voor ligt op de klas.
         </p>
     </div>
     <div class="col2 sixty-forty screenshot">
@@ -175,7 +175,7 @@
         <h2>Badges waar je trots op kunt zijn</h2>
         <p class="justify">
             <img class="rounded-background" src="/images/screenshot-tour/badges-3.png" style="width:228px;float:right;margin-left:20px;"/>
-            Khan Academie bevat volop game-elementen. Zodra je inlogt ga je badges en punten verdienen met je activiteiten. Hoe meer jij jezelf uitdaagt, des te meer verdien je om trots op te zijn.<br/><br/>
+            Khan Academie bevat volop game-elementen. Zodra je inlogt, ga je badges en punten verdienen met je activiteiten. Hoe meer jij jezelf uitdaagt, des te meer verdien je om trots op te zijn.<br/><br/>
             Een aantal van de kleinere badges zijn makkelijk te verdienen, <a href="/badges/view">de meest waardevolle badges</a> vergen meer oefening en soms jarenlange inspanning.
         </p>
     </div>
